# CS2COREDTEST

./: CMakeLists.txt  main.cpp  math.cpp  math.h  visuals.cpp  visuals.h
.devcontainer/: devcontainer.json
